@@ -1,9 +1,11 @@
-<{includeq file="$xoops_rootpath/modules/fmcontent/templates/admin/fmcontent_header.html"}>
+<{if $header}><{includeq file="$xoops_rootpath/modules/fmcontent/templates/admin/fmcontent_header.html"}><{/if}>
 
 <div id="tools" class="marg5 pad5">
 	<!-- Display clone form -->
 	<{if $folder}><{$folder}><{/if}>
 	<{if $purge}><{$purge}><{/if}>
+	<{if $alias}><{$alias}><{/if}>
+	
 	<{if $messages}>
 	<div id="xo-module-log">
 	    <h4><{$smarty.const._FMCONTENT_LOG_TITLE}></h4>
